Inclusão da  página de ver detalhes da vaga e mais algumas alterações

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,7 +35,7 @@
                                 <h2>{{dataValues.titulo}}</h2>
                                 <p>R${{dataValues.salario}}</p>
                                 <span class="new-job-label">Nova</span>
-                                <a class="btn btn-primary">Ver vaga</a>
+                                <a class="btn btn-primary" href="/jobs/views/{{dataValues.id}}">Ver vaga</a>
                             </li>
                         {{/each}}    
                     </ul>
