--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -10,9 +10,12 @@
 <body>
     <header>
         <nav id="navbar-principal" class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">Look Jobs</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggle-icon"></span>
+            <a id="title-principal" class="navbar-brand" href="/">
+                <!--<img src="/img/logo.jpg" alt="logo" class="logo">-->
+                LookJobs
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml auto">
