--- a/public/css/style.css
+++ b/public/css/style.css
@@ -396,4 +396,59 @@
         padding: 0;
     }
 
+    #top-container button {
+        width: 100%;
+    }
+
+    #jobs-container {
+        padding: 20px;
+    }
+
+    .list-group-item {
+        padding: 15px 85px;
+    }
+
+    .list-group-item h2 {
+        font-size: 1.2rem;
+        width: 80%;
+    }
+
+    .list-group-item img {
+        width: 50px;
+        left: 15px;
+        top: calc(50% - 25px);
+    }
+
+    .new-job .new-job-label {
+        display: none;
+    }
+
+    /* job view */
+
+    .back-link {
+        margin-left: 30px;
+    }
+
+    #job-view-container p {
+        font-size: 1.3rem;
+    }
+
+    .job-desc {
+        width: 80%;
+    }
+
+    /* add view */
+    #form-box {
+        padding: 25px;
+    }
+
+    #form-box h2 {
+        font-size: 1rem;
+    }
+
+    #form-box button {
+        width: 100%;
+    }
+
+ 
 }
